my-assignment/common-resource/image-pull-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: Always-Pull-Images
  annotations:
    policies.kyverno.io/title: always-pull-images
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Image pull policy should be set to Always to ensure the latest image is pulled.
spec:
  validationFailureAction: enforce
  rules:
  - name: always-pull-images
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "?*"
            imagePullPolicy: Always
